nldl_derive/tests/ui/deserializable/nla-type-missing-wildcard-on-deserialize-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/deserializable/nla-type-missing-wildcard-on-deserialize-fails.rs:3:28
  |
3 | #[derive(Debug, PartialEq, NetlinkAttributeDeserializable)]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: One variant must be marked with #[nla_type(_)] for wildcard handling. None found.
